Javadoc and refactoring

--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.kindalov.struck</groupId>
-    <artifactId>struck</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <groupId>org.struckture</groupId>
+    <artifactId>struckture-base</artifactId>
+    <version>1.0-SNAPSHOT</version>
+
+    <developers>
+        <developer>
+            <name>Marjan Kindalov</name>
+        </developer>
+    </developers>
 
     <packaging>jar</packaging>
 
