pom and Tests naming

--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,23 @@
 
     <groupId>org.struckture</groupId>
     <artifactId>struckture-base</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.9-SNAPSHOT</version>
+
+    <name>Struckture</name>
+    <description>Binary structure reader for Java</description>
 
     <developers>
         <developer>
             <name>Marjan Kindalov</name>
+            <email>marjan.kindalov@gmail.com</email>
         </developer>
     </developers>
+
+    <scm>
+        <connection>scm:git:git://github.com/mkindalov/struckture.git</connection>
+        <developerConnection>scm:git:git@github.com:mkindalov/struckture.git</developerConnection>
+        <url>https://github.com/mkindalov/struckture</url>
+    </scm>
 
     <packaging>jar</packaging>
 
