--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.struckture</groupId>
     <artifactId>struckture-base</artifactId>
-    <version>0.9.2-SNAPSHOT</version>
+    <version>0.9.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Struckture</name>
@@ -24,8 +24,15 @@
         <connection>scm:git:git://github.com/mkindalov/struckture.git</connection>
         <developerConnection>scm:git:git@github.com:mkindalov/struckture.git</developerConnection>
         <url>https://github.com/mkindalov/struckture</url>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
+
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
